--- a/app/src/main/res/layout/left_fragment.xml
+++ b/app/src/main/res/layout/left_fragment.xml
@@ -7,10 +7,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <EditText
+            android:id="@+id/search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <Button
+            android:id="@+id/search1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="搜索"/>
